<resources>
    <string name="app_name">Personal Notes</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_note">Delete</string>
    <string name="delete_note_confirm">Are you sure you want to delete this note?</string>
    <string name="deleted">Note deleted</string>
    <string name="cancel">Cancel</string>
    <string name="note_title_hint">Title</string>
    <string name="note_content_hint">Your note here...</string>
    <string name="save">Save</string>
    <string name="note_detail">Note</string>
    <string name="search_notes_hint">Search notes...</string>
    <string name="empty_note_error">Note is empty</string>
    <string name="no_notes_yet">No notes yet.</string>
</resources>
